# Django_TMS_Homework

./: .gitignore  createFakeData.py  db.sqlite3  pyproject.toml
lesson20/: asgi.py  settings.py  urls.py  wsgi.py
posts/: admin.py  email.py  forms.py  history.py  logfilemiddleware.py  models.py  views.py
posts/api/: permissions.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_note_mod_time.py  0002_tag_remove_note_mod_time_alter_note_content_and_more.py  0003_alter_note_options_note_mod_time_note_mod_time_index.py  0004_alter_note_mod_time.py
static/css/: about_us.css  forms.css  main.css
templates/: about_us.html  edit_form.html  footer.html  menu.html  note.html  posts-list.html  profile.html  welcome.html
templates/registration/: register-form.html  reset-form.html
